[#29] Update gc logging to include -XX:+PrintGCCause